--- a/app/views/indexes/index.html
+++ b/app/views/indexes/index.html
@@ -1,6 +1,6 @@
 <style>
 body {
-	background-image: url('../../../public/footer_lodyas.png') repeat;
+	background-image: url('footer_lodyas.png') repeat;
 }
 </style>
 <center><font size="40px;">Pillowfort!</font></center>
