--- a/app/views/indexes/index.html.erb
+++ b/app/views/indexes/index.html.erb
@@ -1,6 +1,6 @@
 <style>
 body {
-	background: url(<%= asset_data_uri 'footer_lodyas.png' %>) repeat;
+	background: url('footer_lodyas.png') repeat;
 }
 </style>
 <center><font size="40px;">Pillowfort!</font></center>
