--- a/app/views/indexes/index.html.erb
+++ b/app/views/indexes/index.html.erb
@@ -1,6 +1,6 @@
 <style>
 body {
-	background: url(asset_path('footer_lodyas.png')) repeat;
+	background-image: image-url('footer_lodyas.png');
 }
 </style>
 <center><font size="40px;">Pillowfort!</font></center>
