--- a/app/views/indexes/index.html.erb
+++ b/app/views/indexes/index.html.erb
@@ -1,6 +1,6 @@
 <style>
 body {
-	background-image: image-url('footer_lodyas.png');
+	background: transparent url("http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/footer_lodyas.png") repeat scroll 0% 0%;
 }
 </style>
 <center><font size="40px;">Pillowfort!</font></center>
