--- a/app/views/indexes/index.html.erb
+++ b/app/views/indexes/index.html.erb
@@ -2,5 +2,15 @@
 body {
 	background: transparent url("http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/footer_lodyas.png") repeat scroll 0% 0%;
 }
+
+.title {
+	margin: auto;
+	font-size: 40px;
+	color: #0099CC;
+	font-style: sans-serif;
+	text-transform: small-caps;
+	margin-top: 15%;
+}
 </style>
-<center><font size="40px;">Pillowfort!</font></center>
+
+<div class="title">Pillowfort!</div>
