--- a/app/views/indexes/index.html.erb
+++ b/app/views/indexes/index.html.erb
@@ -7,8 +7,8 @@ body {
 	margin: auto;
 	font-size: 40px;
 	color: #0099CC;
-	font-style: sans-serif;
-	text-transform: small-caps;
+	font-family: sans-serif;
+	font-variant: small-caps;
 	margin-top: 15%;
 }
 </style>
