--- a/app/views/indexes/index.html.erb
+++ b/app/views/indexes/index.html.erb
@@ -4,13 +4,13 @@ body {
 }
 
 .title {
-	margin: auto;
-	font-size: 40px;
+	font-size: 50px;
 	color: #0099CC;
 	font-family: sans-serif;
 	font-variant: small-caps;
 	margin-top: 15%;
+	text-align:center;
 }
 </style>
 
-<div class="title">Pillowfort!</div>
+<div class="title">Pillowfort</div>
