--- a/app/views/indexes/index.html.erb
+++ b/app/views/indexes/index.html.erb
@@ -4,13 +4,23 @@ body {
 }
 
 .title {
-	font-size: 50px;
-	color: #0099CC;
+	font-size: 70px;
+	color: #07BDDB;
 	font-family: sans-serif;
 	font-variant: small-caps;
 	margin-top: 15%;
 	text-align:center;
 }
+
+.subt{
+	font-family: sans-serif;
+	text-align:center;
+}
+
+.subt a{
+	color: #07BDDB;
+}
 </style>
 
 <div class="title">Pillowfort</div>
+<div class="subt">Coming soon. Follow us on <a href="http://twitter.com/Pillowfort_io">Twitter</a> or <a href="http://pillowfort-io.tumblr.com/">Tumblr</a> for updates!</div>
