--- a/app/views/indexes/index.html.erb
+++ b/app/views/indexes/index.html.erb
@@ -13,12 +13,16 @@ body {
 }
 
 .subt{
+	margin-top: 20px;
 	font-family: sans-serif;
 	text-align:center;
+	color: #fff;
+	font-size: 14px;
 }
 
 .subt a{
 	color: #07BDDB;
+	text-decoration: none;
 }
 </style>
 
